@@ -1,3 +1,6 @@
+2007-07-23  Johan Gonqvist <johan.gronqvist@gmail.com>
+	* src/plugins/Calendar.py: first day of calendar is an option.
+
 2007-10-05 Benny Malengier <benny.malengier@gramps-project.org> 
 	* src/DisplayTabs/_GalleryTab.py: remove bug that leads to database corruption,
 	if media is deleted in mediaview, remove media in all open gallery tabs
